я добавил кнопку перезагрузки и рандомный цвет

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <div class="container"></div>
     <button>click for setting the grid size</button>
+    <button class="reset">reset</button>
 </body>
 </html>
